--- a/app/src/main/res/layout/activity_detail_order.xml
+++ b/app/src/main/res/layout/activity_detail_order.xml
@@ -723,15 +723,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/margin_activity"
+                        android:layout_marginBottom="@dimen/margin_low"
                         android:fontFamily="@font/poppins"
                         android:text="Silahkan Ubah Jadwal Pengiriman Anda"
                         android:textColor="@color/black"
                         app:layout_constraintBottom_toTopOf="@+id/textView31"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView30"
-                        tools:ignore="HardcodedText,RtlCompat"
-                        android:layout_marginBottom="@dimen/margin_activity"
-                        />
+                        app:layout_constraintTop_toTopOf="@+id/textView30"
+                        tools:ignore="HardcodedText,RtlCompat" />
 
                     <TextView
                         android:id="@+id/textView31"
