--- a/app/src/main/res/layout/container_order.xml
+++ b/app/src/main/res/layout/container_order.xml
@@ -90,7 +90,10 @@
             android:textColor="@color/colorWhite"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="@+id/tv_orderid"
-            app:layout_constraintTop_toBottomOf="@+id/tv_orderid" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_orderid"
+            tools:ignore="HardcodedText" />
+
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
